--- a/DESIGN_PATTERNS/pom.xml
+++ b/DESIGN_PATTERNS/pom.xml
@@ -2,15 +2,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>JAVA_2023</groupId>
-	<artifactId>JAVA_2023</artifactId>
-	<version>1.0.0</version>
+	<parent>
+		<groupId>JAVA_2023</groupId>
+		<artifactId>JAVA_2023</artifactId>
+		<version>1.0.0</version>
+	</parent>
 	<packaging>pom</packaging>
-	<name>JAVA_2023</name>
-	<description>JAVA_2023</description>
+	<artifactId>DESIGN_PATTERNS</artifactId>
 	<modules>
-	<module>LEARN_JAVA17</module>
-	<module>DESIGN_PATTERNS</module>
+		<module>abstract_factory</module>
+		<module>adapter</module>
+		<module>bridge</module>
 	</modules>
-
 </project>
