--- a/DESIGN_PATTERNS/bridge/pom.xml
+++ b/DESIGN_PATTERNS/bridge/pom.xml
@@ -6,4 +6,9 @@
     <version>1.0.0</version>
   </parent>
   <artifactId>bridge</artifactId>
+  <properties>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+</properties>
 </project>
