--- a/JAVA8_17/pom.xml
+++ b/JAVA8_17/pom.xml
@@ -1,9 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>JAVA_2023</groupId>
-    <artifactId>JAVA_2023</artifactId>
-    <version>1.0.0</version>
-  </parent>
-  <artifactId>JAVA8_17</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>JAVA_2023</groupId>
+		<artifactId>JAVA_2023</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	<artifactId>JAVA8_17</artifactId>
+	<properties>
+		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>
 </project>
