--- a/SpringClient/src/main/resources/application.properties
+++ b/SpringClient/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-server.port=8100
-spring.application.name=sbapplication
+server.port=8200
+spring.application.name=springclient
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/sbapp?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/sclient?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = admin
 spring.jpa.hibernate.ddl-auto = create
