--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>JAVA8_17</module>
 		<module>XML_XSL_2_JAVA</module>
 		<module>SBApplication</module>
+		<module>SpringClient</module>
 	</modules>
 
 </project>
