--- a/SpringClient/src/main/resources/application.properties
+++ b/SpringClient/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.output.ansi.enabled=always
 
 logging.file.path=logs/
 logging.file.name=logs/application.log
+
+sbapp.path=http://localhost:8100
