--- a/SBApplication/pom.xml
+++ b/SBApplication/pom.xml
@@ -70,6 +70,19 @@
 			<version>6.1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.9.2</version>
+		</dependency>
+
+		<!-- JSON processing (org.json) -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
